<resources>
    <string name="app_name">WSO2 IS Sample</string>
    <string name="sign_in">Sign In with WSO2</string>
    <string name="logged_out">Successfully Logged Out!</string>
    <string name="welcome">Welcome!</string>
    <string name="test">Admin</string>
    <string name="username">Username</string>
    <string name="email">user@abc.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="wso2_logo">WSO2 Logo</string>
    <string name="user_image">User Image</string>
</resources>
